<resources>
    <string name="app_name">StudentFU</string>
    <string name="hint_username">Имя пользователя</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_password_conf">Повторите пароль</string>
    <string name="hint_email">E-mail</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>

    <string name="goto_login"><u>Уже с нами? Залогинься!</u></string>
    <string name="goto_register"><u>Зарегистрироваться</u></string>
    <string name="descr_logo_image">Логотип Финансового Университета</string>
    <string name="bottom_nav_news">Новости</string>
    <string name="bottom_nav_timetable">Расписание</string>
    <string name="bottom_nav_reference">Справки</string>
    <string name="bottom_nav_profile">Профиль</string>
    <string name="profile_logout">Выйти</string>
    <string name="timetable_today">Сегодня</string>
    <string name="timetable_tmrw">Завтра</string>
</resources>