<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green_fa"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/section_registration"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:constraint_referenced_ids="reg_password_conf, reg_email"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reg_username"
        android:src="@drawable/falogo_small_white"
        android:contentDescription="@string/descr_logo_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_username"
        style="@style/MaterialInputPrimary"
        android:hint="@string/hint_username"
        app:startIconDrawable="@drawable/ic_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reg_password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password"
        style="@style/MaterialInputPrimary"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_account_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password_conf"
        style="@style/MaterialInputPrimary"
        android:hint="@string/hint_password_conf"
        app:endIconMode="password_toggle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email"
        style="@style/MaterialInputPrimary"
        android:hint="@string/hint_email"
        app:startIconDrawable="@drawable/ic_at"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_conf">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register"
        style="@style/IconButtonContinue"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/registration_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        android:textSize="18sp"
        android:text="@string/goto_login"
        android:textColor="@color/input_bg"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>